[project]
name = "auto-podcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.1.40",
    "feedgen>=1.0.0",
    "flask>=3.1.0",
    "langchain>=0.3.22",
    "langchain-openai>=0.3.1",
    "pyautogui>=0.9.54",
    "selenium>=4.30.0",
]
